--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Document</title>
 	<link href="Homepage/dist/styles.css" rel="stylesheet"></head>
 	<body>
-		
+		Test
 	<script type="text/javascript" src="Homepage/dist/manifest.91c74a77c7da6f08cf81.js"></script><script type="text/javascript" src="Homepage/dist/vendor.472b6719ea69f4054aaf.js"></script><script type="text/javascript" src="Homepage/dist/bundle.8d0607d353defa71620a.js"></script></body>
 </html>
