--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Document</title>
+		<title>saulool - Github Pages</title>
 	<link href="Homepage/dist/styles.css" rel="stylesheet"></head>
 	<body>
-		Test
+		Page under construction - Come back soon!
 	<script type="text/javascript" src="Homepage/dist/manifest.91c74a77c7da6f08cf81.js"></script><script type="text/javascript" src="Homepage/dist/vendor.472b6719ea69f4054aaf.js"></script><script type="text/javascript" src="Homepage/dist/bundle.8d0607d353defa71620a.js"></script></body>
 </html>
