--- a/Homepage/src/index.html
+++ b/Homepage/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>saulool - Github Pages</title>
+		<title>saulool | Github Pages</title>
 	</head>
 	<body>
 		Page under construction - Come back soon!
