--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>saulool - Github Pages</title>
+		<title>saulool | Github Pages</title>
 	<link href="Homepage/dist/styles.css" rel="stylesheet"></head>
 	<body>
 		Page under construction - Come back soon!
-	<script type="text/javascript" src="Homepage/dist/manifest.91c74a77c7da6f08cf81.js"></script><script type="text/javascript" src="Homepage/dist/vendor.472b6719ea69f4054aaf.js"></script><script type="text/javascript" src="Homepage/dist/bundle.8d0607d353defa71620a.js"></script></body>
+	<script type="text/javascript" src="Homepage/dist/manifest.548f2039d779184e280c.js"></script><script type="text/javascript" src="Homepage/dist/vendor.ae11f03c3460480b9dc6.js"></script><script type="text/javascript" src="Homepage/dist/bundle.9914a1bb1d2e72a512e5.js"></script></body>
 </html>
